# media-manager

./: .gitmodules  10-media-manager-usb-mount-rules.rules  BUILDING  CMakeLists.txt  README  README.md  common.cmake
doc/: Doxyfile.in  frontmatter.md
packaging/: media-manager.spec
src/: CMakeLists.txt  browserprovider.cpp  browserprovider.h  browserstub.cpp  browserstub.h  client.cpp  common.cpp  common.h  indexerstub.cpp  indexerstub.h  lms.cpp  lms.h  main.cpp  playerprovider.cpp  playerprovider.h  playerstub.cpp  playerstub.h  serviceprovider.cpp  serviceprovider.h
src/interfaces/: dleyna-renderer.xml  dleyna.xml
tests/: CMakeLists.txt
tests/browserprovider/: CMakeLists.txt  browserprovider_test.cpp
tests/lmsprovider/: CMakeLists.txt  lmsprovider_test.cpp
tests/player_commonapi/: CMakeLists.txt  player_commonapi_test.cpp
tests/playerprovider/: CMakeLists.txt  playerprovider_test.cpp
